<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="5"
    android:padding="16dp">


<!--baris1-->
    <Button
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/ac"/>
    <Button
        android:id="@+id/buttonKurBuk"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/KurBuk"/>
    <Button
        android:id="@+id/buttonKurTup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/KurTup"/>
    <Button
        android:id="@+id/buttonHapus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/hapus"/>

<!--    baris 2-->
    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_7"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_8"/>
    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_9"/>
    <Button
        android:id="@+id/buttonTambah"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/Tambah"/>

<!--    baris 3-->
    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_4"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_5"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_6"/>
    <Button
        android:id="@+id/buttonKurang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/Kurang"/>

<!--    baris 4-->
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_1"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_2"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_3"/>
    <Button
        android:id="@+id/buttonKali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/Kali"/>
<!--    baris 5-->
    <Button
        android:id="@+id/buttonKoma"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/Koma"/>
    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/_0"/>
    <Button
        android:id="@+id/buttonHasil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/Hasil"/>
    <Button
        android:id="@+id/buttonBagi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:text="@string/Bagi"/>

</GridLayout>
